[project]
name = "emmett"

[tool.poetry]
name = "emmett"
version = "2.5.12"
description = "The web framework for inventors"
authors = ["Giovanni Barillari <g@baro.dev>"]
license = "BSD-3-Clause"

readme = "README.md"
homepage = "https://emmett.sh"
repository = "https://github.com/emmett-framework/emmett"
documentation = "https://emmett.sh/docs"

keywords = ["web", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    {include = "emmett/**/*.*", format = "sdist" },
    {include = "tests", format = "sdist"}
]
include = [
    "CHANGES.md",
    "LICENSE",
    "docs/**/*"
]

[tool.poetry.scripts]
emmett = "emmett.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=6.0"
granian = "~1.5.0"
emmett-crypto = "^0.6"
pendulum = "~3.0.0"
pyDAL = "17.3"
python-rapidjson = "^1.14"
pyyaml = "^6.0"
renoir = "^1.6"
severus = "^1.1"

orjson = { version = "~3.10", optional = true }

uvicorn = { version = "^0.19.0", optional = true }
h11 = { version = ">= 0.12.0", optional = true }
websockets = { version = "^10.0", optional = true }
httptools = { version = "~0.6.0", optional = true, markers = "sys_platform != 'win32'" }

[tool.poetry.dev-dependencies]
ipaddress = "^1.0"
pytest = "^7.1"
pytest-asyncio = "^0.15"
psycopg2-binary = "^2.9.3"

[tool.poetry.extras]
orjson = ["orjson"]
uvicorn = ["uvicorn", "h11", "httptools", "websockets"]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/emmett-framework/emmett/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
