[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emmett"
version = "2.5.13"
description = "The web framework for inventors"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.8"

authors = [
    { name = "Giovanni Barillari", email = "g@baro.dev" }
]

keywords = ["web", "asyncio"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "click>=6.0",
    "emmett-core[granian,rapidjson]",
    "pendulum~=3.0.0",
    "pydal",
    "pyyaml~=6.0",
    "renoir~=1.6",
    "severus~=1.1",
]

[project.optional-dependencies]
orjson = ["orjson~=3.10"]
uvicorn = [
    "uvicorn~=0.19",
    "h11>=0.12",
    "websockets~=10.0",
    "httptools~=0.6; sys_platform != 'win32'"
]

[project.urls]
Homepage = 'https://emmett.sh'
Documentation = 'https://emmett.sh/docs'
Funding = 'https://github.com/sponsors/gi0baro'
Source = 'https://github.com/emmett-framework/emmett'
Issues = 'https://github.com/emmett-framework/emmett/issues'

[project.scripts]
emmett = "emmett.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    '/README.md',
    '/CHANGES.md',
    '/LICENSE',
    '/docs',
    '/emmett',
    '/tests',
]

[tool.uv]
dev-dependencies = [
    "ipaddress>=1.0",
    "pytest>=7.1",
    "pytest-asyncio>=0.15",
    "psycopg2-binary~=2.9; python_version != '3.13'",
]

[tool.uv.sources]
emmett-core = { git = "https://github.com/emmett-framework/core", rev = "ab79ed4" }
pydal = { git = "https://github.com/gi0baro/pydal.git", branch = "emmett" }
